- svm and dt experiments done

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
     "def vectorizar(matrix):\n",
     "  return matrix.flatten()\n",
     "\n",
-    "def proccess_letters(dataset, wavelet, cuts):\n",
+    "def proccess_letters(dataset, wavelet, cuts = 2):\n",
     "  \n",
     "  data_X = []\n",
     "  data_Y = []\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,12 +144,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Dimension cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dimension_cuts = range(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Kernels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernels = [\"linear\", \"poly\", \"rbf\", \"sigmoid\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### PCA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,23 +235,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Accuracy calculation"
+    "#### Dimension experiment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_max_accuracy(experiment_wavelets):\n",
-    "    max_results = list()\n",
+    "def dimension_experiment(classification, get_accuracy, wavelet):\n",
+    "    experiment_dimensions = dict()\n",
     "\n",
-    "    for family, result in experiment_wavelets.items():\n",
-    "        max_result = max(result, key = lambda tuple: tuple[1])\n",
+    "    print(\"Cuts Dimensions Accuracy\")\n",
+    "    \n",
+    "    for cut in dimension_cuts:\n",
+    "\n",
+    "        df_train_x, df_train_y = proccess_letters(df_train, wavelet, cuts=cut)\n",
+    "        df_test_x, df_test_y = proccess_letters(df_test, wavelet, cuts=cut)\n",
+    "\n",
+    "        prediction = classification(df_train_x, df_train_y, df_test_x)\n",
+    "        accuracy = get_accuracy(prediction)\n",
+    "\n",
+    "        dimensions = len(df_train_x[0])\n",
+    "        \n",
+    "        print(f'{cut}   {dimensions}       {accuracy}')\n",
+    "        experiment_dimensions[cut] = [(dimensions, accuracy)]\n",
+    "    \n",
+    "    return experiment_dimensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Kernel experiment (Only SVM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kernel_experiment(classification, get_accuracy, wavelet):\n",
+    "    experiment_dimensions = dict()\n",
+    "\n",
+    "    print(\"Kernel Accuracy\")\n",
+    "    \n",
+    "    for kernel in kernels:\n",
+    "\n",
+    "        df_train_x, df_train_y = proccess_letters(df_train, wavelet)\n",
+    "        df_test_x, df_test_y = proccess_letters(df_test, wavelet)\n",
+    "\n",
+    "        prediction = classification(df_train_x, df_train_y, df_test_x, kernel)\n",
+    "        accuracy = get_accuracy(prediction)\n",
+    "        \n",
+    "        print(f'{kernel} {accuracy}')\n",
+    "        experiment_dimensions[kernel] = [(kernel, accuracy)]\n",
+    "    \n",
+    "    return experiment_dimensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Max accuracy calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max_results(experiment):\n",
+    "    max_results = list()\n",
+    "    parameters = list()\n",
+    "\n",
+    "    for parameter, result in experiment.items():\n",
+    "        index = len(result[0]) - 1\n",
+    "\n",
+    "        max_result = max(result, key = lambda tuple: tuple[index])\n",
     "        max_results.append(max_result)\n",
     "\n",
-    "    return max_results"
+    "        parameters.append(parameter)\n",
+    "\n",
+    "    return parameters, max_results"
    ]
   },
   {
@@ -231,28 +334,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_12692/2933813518.py\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mdf_test_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_test_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproccess_letters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwavelet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0msvm_predicted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSVM_classification\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_train_y\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_test_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0msvm_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_SVM_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msvm_predicted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_12692/3004530721.py\u001b[0m in \u001b[0;36mSVM_classification\u001b[0;34m(df_train_x, df_train_y, df_test_x)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0m_svm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'linear'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0m_svm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train_x\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdf_train_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0msvm_predicted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_svm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_test_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msvm_predicted\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/utec-bigdata-2022-1/lib/python3.9/site-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    808\u001b[0m             \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    809\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 810\u001b[0;31m             \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    811\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    812\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/utec-bigdata-2022-1/lib/python3.9/site-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    433\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_for_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    434\u001b[0m         \u001b[0mpredict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sparse_predict\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sparse\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dense_predict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 435\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    436\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    437\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_dense_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/utec-bigdata-2022-1/lib/python3.9/site-packages/sklearn/svm/_base.py\u001b[0m in \u001b[0;36m_dense_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    452\u001b[0m         \u001b[0msvm_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLIBSVM_IMPL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_impl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 454\u001b[0;31m         return libsvm.predict(\n\u001b[0m\u001b[1;32m    455\u001b[0m             \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msupport_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def SVM_classification(df_train_x, df_train_y, df_test_x):\n",
-    "    _svm = svm.SVC(kernel='linear')\n",
+    "def SVM_classification(df_train_x, df_train_y, df_test_x, kernel_type = 'linear'):\n",
+    "    _svm = svm.SVC(kernel=kernel_type)\n",
     "    _svm.fit(df_train_x,df_train_y)\n",
     "    svm_predicted = _svm.predict(df_test_x)\n",
     "\n",
@@ -268,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,6 +373,34 @@
    "metadata": {},
    "source": [
     "#### Tabla de resumen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuts Dimensions Accuracy\n",
+      "0   784       78.16508644729504\n",
+      "1   395       79.81037367540435\n",
+      "2   201       83.61684327941997\n",
+      "3   104       81.42777467930841\n",
+      "4   55       71.91857222532069\n",
+      "5   31       48.22922476296709\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm_experiment_dimensions = dimension_experiment(SVM_classification, get_SVM_error, 'db4')\n",
+    "\n",
+    "svm_cut_parameters, svm_cut_max_results = get_max_results(svm_experiment_dimensions)\n",
+    "\n",
+    "#print(\"SVM wavelets experiment:\")\n",
+    "#svm_cut_parameters, svm_cut_max_results"
    ]
   },
   {
@@ -310,10 +425,24 @@
    "source": [
     "svm_experiment_wavelets = wavelet_experiment(SVM_classification, get_SVM_error)\n",
     "\n",
-    "svm_experiment_wavelets_max = get_max_accuracy(svm_experiment_wavelets)\n",
+    "svm_wavelets_parameters, svm_wavelets_max_results = get_max_results(svm_experiment_wavelets)\n",
     "\n",
     "print(\"SVM wavelets experiment:\")\n",
-    "svm_experiment_wavelets_max"
+    "svm_wavelets_parameters, svm_wavelets_max_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_experiment_kernels = kernel_experiment(SVM_classification, get_SVM_error, 'db4')\n",
+    "\n",
+    "svm_kernel_parameters, svm_kernel_max_results = get_max_results(svm_experiment_kernels)\n",
+    "\n",
+    "#print(\"SVM wavelets experiment:\")\n",
+    "#svm_wavelets_parameters, svm_wavelets_max_results"
    ]
   },
   {
@@ -370,12 +499,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def DT_classification(df_train_x, df_train_y, df_test_x):\n",
-    "    dt = tree.DecisionTreeClassifier()\n",
+    "def DT_classification(df_train_x, df_train_y, df_test_x, split_criteria = 'gini'):\n",
+    "    dt = tree.DecisionTreeClassifier(criterion=split_criteria)\n",
     "    dt.fit(df_train_x,df_train_y)\n",
     "    dt_predicted = dt.predict(df_test_x)\n",
     "\n",
@@ -391,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,24 +563,38 @@
    "source": [
     "dt_experiment_wavelets = wavelet_experiment(DT_classification, get_DT_error)\n",
     "\n",
-    "dt_experiment_wavelets_max = get_max_accuracy(dt_experiment_wavelets)\n",
+    "dt_family_wavelet_parameters, dt_family_wavelet_max_results = get_max_results(dt_experiment_wavelets)\n",
     "\n",
     "print(\"Decision tree wavelets experiment:\")\n",
-    "dt_experiment_wavelets_max"
+    "dt_family_wavelet_parameters, dt_family_wavelet_max_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuts Dimensions Accuracy\n",
+      "0   784       43.363078639152256\n",
+      "1   399       49.58170663692136\n",
+      "2   207       52.593418851087556\n",
+      "3   111       50.13943112102621\n",
+      "4   63       43.01450083658673\n",
+      "5   39       42.72169548243168\n"
+     ]
+    }
+   ],
    "source": [
-    "dt_experiment_dimension = dimension_experiment(DT_classification, get_DT_error)\n",
+    "dt_experiment_dimension = dimension_experiment(DT_classification, get_DT_error, 'rbio3.7')\n",
     "\n",
-    "dt_experiment_dimension_max = get_max_accuracy(dt_experiment_dimension)\n",
+    "dt_cut_parameters, dt_cut_max_results = get_max_results(dt_experiment_dimension)\n",
     "\n",
-    "print(\"Decision tree wavelets experiment:\")\n",
-    "dt_experiment_dimension_max"
+    "#print(\"Decision tree cuts/reduction experiment:\")\n",
+    "#dt_cut_parameters, dt_cut_max_results"
    ]
   },
   {
@@ -492,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.2"
   },
   "vscode": {
    "interpreter": {
