- knn functions added

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,11 +165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "kernels = [\"linear\", \"poly\", \"rbf\", \"sigmoid\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_neighbors_list = [3, 6, 12, 24, 48]"
    ]
   },
   {
@@ -181,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,12 +317,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### K-neighbors experiment (Only KNN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def k_neighbors_experiment(classification, get_accuracy, wavelet):\n",
+    "    experiment_dimensions = dict()\n",
+    "\n",
+    "    print(\"Neighbors Accuracy\")\n",
+    "    \n",
+    "    for k in k_neighbors_list:\n",
+    "\n",
+    "        df_train_x, df_train_y = proccess_letters(df_train, wavelet)\n",
+    "        df_test_x, df_test_y = proccess_letters(df_test, wavelet)\n",
+    "\n",
+    "        prediction = classification(df_train_x, df_train_y, df_test_x, k)\n",
+    "        accuracy = get_accuracy(prediction)\n",
+    "        \n",
+    "        print(f'{k} {accuracy}')\n",
+    "        experiment_dimensions[k] = [(k, accuracy)]\n",
+    "    \n",
+    "    return experiment_dimensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Max accuracy calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +371,115 @@
     "        parameters.append(parameter)\n",
     "\n",
     "    return parameters, max_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def KNN_classification(df_train_x, df_train_y, df_test_x, k = 24):\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "    knn.fit(df_train_x,df_train_y)\n",
+    "    knn_predicted = knn.predict(df_test_x)\n",
+    "\n",
+    "    return knn_predicted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Estimación del error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_KNN_error(knn_predicted):\n",
+    "    knn_success = 0.0\n",
+    "    \n",
+    "    for i, val in enumerate(knn_predicted):\n",
+    "        if val == df_test_y[i]:\n",
+    "            knn_success += 1\n",
+    "\n",
+    "    return knn_success/len(knn_predicted)*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tabla de resumen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "knn_experiment_wavelets = wavelet_experiment(KNN_classification, get_KNN_error)\n",
+    "\n",
+    "knn_family_wavelet_parameters, knn_family_wavelet_max_results = get_max_results(knn_experiment_wavelets)\n",
+    "\n",
+    "print(\"KNN wavelets experiment:\")\n",
+    "print(list(zip(knn_family_wavelet_parameters, knn_family_wavelet_max_results)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = '' #Usa el wavelet con mayor porcentaje de prediccción\n",
+    "\n",
+    "knn_experiment_dimension = dimension_experiment(KNN_classification, get_KNN_error, w)\n",
+    "\n",
+    "knn_cut_parameters, knn_cut_max_results = get_max_results(knn_experiment_dimension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn_experiment_neighbors = k_neighbors_experiment(KNN_classification, get_KNN_error, w)\n",
+    "\n",
+    "knn_neighbors_parameters, knn_neighbors_max_results = get_max_results(knn_experiment_neighbors)\n",
+    "\n",
+    "#print(\"SVM wavelets experiment:\")\n",
+    "#svm_wavelets_parameters, svm_wavelets_max_results"
    ]
   },
   {
@@ -377,34 +534,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cuts Dimensions Accuracy\n",
-      "0   784       78.16508644729504\n",
-      "1   395       79.81037367540435\n",
-      "2   201       83.61684327941997\n",
-      "3   104       81.42777467930841\n",
-      "4   55       71.91857222532069\n",
-      "5   31       48.22922476296709\n"
-     ]
-    }
-   ],
-   "source": [
-    "svm_experiment_dimensions = dimension_experiment(SVM_classification, get_SVM_error, 'db4')\n",
-    "\n",
-    "svm_cut_parameters, svm_cut_max_results = get_max_results(svm_experiment_dimensions)\n",
-    "\n",
-    "#print(\"SVM wavelets experiment:\")\n",
-    "#svm_cut_parameters, svm_cut_max_results"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
@@ -446,48 +575,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### KNN"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cuts Dimensions Accuracy\n",
+      "0   784       78.16508644729504\n",
+      "1   395       79.81037367540435\n",
+      "2   201       83.61684327941997\n",
+      "3   104       81.42777467930841\n",
+      "4   55       71.91857222532069\n",
+      "5   31       48.22922476296709\n"
+     ]
+    }
+   ],
    "source": [
-    "knn = KNeighborsClassifier(n_neighbors=24)\n",
-    "knn.fit(df_train_x,df_train_y)\n",
-    "knn_predicted = knn.predict(df_test_x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Estimación del error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "knn_success = 0.0\n",
-    "for i, val in enumerate(knn_predicted):\n",
-    "    if val == df_test_y[i]:\n",
-    "        knn_success += 1\n",
-    "print(knn_success/len(knn_predicted)*100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Tabla de resumen"
+    "svm_experiment_dimensions = dimension_experiment(SVM_classification, get_SVM_error, 'db4')\n",
+    "\n",
+    "svm_cut_parameters, svm_cut_max_results = get_max_results(svm_experiment_dimensions)\n",
+    "\n",
+    "#print(\"SVM wavelets experiment:\")\n",
+    "#svm_cut_parameters, svm_cut_max_results"
    ]
   },
   {
