--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +51,9 @@
     "from sklearn.neighbors import KNeighborsClassifier, NeighborhoodComponentsAnalysis\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import cross_val_score # k fold cross validation\n",
-    "from sklearn import metrics # k fold cross validation"
+    "from sklearn.model_selection import cross_val_score, KFold # k fold cross validation\n",
+    "from sklearn import metrics # k fold cross validation\n",
+    "from sklearn.metrics import recall_score, average_precision_score, roc_auc_score, f1_score, precision_score"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,6 +372,41 @@
     "        parameters.append(parameter)\n",
     "\n",
     "    return parameters, max_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Métricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metrics(df_train, df_test, wavelet, classification, get_precision):\n",
+    "\n",
+    "    df_train_x, df_train_y = proccess_letters(df_train, wavelet)\n",
+    "    df_test_x, df_test_y = proccess_letters(df_test, wavelet)\n",
+    "\n",
+    "    y_pred = classification(df_train_x, df_train_y, df_test_x)\n",
+    "    \n",
+    "    homemade_precision_y = get_precision(y_pred)\n",
+    "\n",
+    "    precision_y = precision_score(df_test_y, y_pred, average='macro')\n",
+    "    recall_y = recall_score(df_test_y, y_pred, average='micro')\n",
+    "    f1_y = f1_score(df_test_y, y_pred, average='micro')\n",
+    "    fpr, tpr, thresholds = metrics.roc_curve(df_test_y, y_pred, pos_label = 24)\n",
+    "    auc_y = metrics.auc(fpr, tpr)\n",
+    "\n",
+    "    print(\"SKlearn precision: \", precision_y)\n",
+    "    print(\"Homemade precision: \", homemade_precision_y / 100)\n",
+    "    print(\"SKlearn recall: \", recall_y)\n",
+    "    print(\"SKlearn F1: \", f1_y)\n",
+    "    print(\"SKlearn AUC: \", auc_y)"
    ]
   },
   {
@@ -483,6 +519,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_metrics(df_train, df_test, \"db4\", KNN_classification, get_KNN_error)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -491,11 +536,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVM_classification(df_train_x, df_train_y, df_test_x, kernel_type = 'linear'):\n",
+    "def SVM_classification(df_train_x, df_train_y, df_test_x, kernel_type = 'rbf'):\n",
     "    _svm = svm.SVC(kernel=kernel_type)\n",
     "    _svm.fit(df_train_x,df_train_y)\n",
     "    svm_predicted = _svm.predict(df_test_x)\n",
@@ -512,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,9 +607,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kernel Accuracy\n",
+      "linear 83.61684327941997\n",
+      "poly 83.74233128834356\n",
+      "rbf 87.00501952035694\n"
+     ]
+    }
+   ],
    "source": [
     "svm_experiment_kernels = kernel_experiment(SVM_classification, get_SVM_error, 'db4')\n",
     "\n",
@@ -603,6 +659,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKlearn precision:  0.8361684327941996\n",
+      "Homemade precision:  0.8361684327941997\n",
+      "SKlearn recall:  0.8361684327941996\n",
+      "SKlearn F1:  0.8361684327941996\n",
+      "SKlearn AUC:  0.9303532110899739\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_metrics(df_train, df_test, \"db4\", SVM_classification, get_SVM_error)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -611,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,6 +787,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKlearn precision:  0.5288622420524262\n",
+      "Homemade precision:  0.5288622420524262\n",
+      "SKlearn recall:  0.5288622420524262\n",
+      "SKlearn F1:  0.5288622420524262\n",
+      "SKlearn AUC:  0.776684809413091\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_metrics(df_train, df_test, \"rbio3.7\", DT_classification, get_DT_error)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -720,14 +818,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sklearn_k_fold_cross_validation (model, x_train, y_train, k)\n",
-    "    scores = cross_val_score(model, x_train, y_, cv = k, scoring = ‘accuracy’)\n",
+    "def sklearn_k_fold_cross_validation (model, x_train, y_train):\n",
+    "    scores = cross_val_score(model, x_train, y_train)\n",
     "    errors = 1 - scores\n",
     "    return scores, errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model = svm.SVC(kernel = \"rbf\")\n",
+    "\n",
+    "#test_score, sklearn_k_fold_cross_validation(test_model, df_train_x, df_train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9998183752613209\n",
+      "0.9985594181958316\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "test_model = svm.SVC(kernel = \"rbf\", probability = True)\n",
+    "kf = KFold(n_splits=2)\n",
+    "\n",
+    "df_train_x_t, df_train_y_t = proccess_letters(df_train, wavelet=\"db4\")\n",
+    "df_test_x_t, df_test_y_t = proccess_letters(df_test, wavelet=\"db4\")\n",
+    "\n",
+    "\n",
+    "df_training_x = np.array(df_train_x_t + df_test_x_t)\n",
+    "df_training_y = np.array(df_train_y_t + df_test_y_t)\n",
+    "\n",
+    "for train_index, test_index in kf.split(df_training_x):\n",
+    "    X_train, X_test = df_training_x[train_index], df_training_x[test_index]\n",
+    "    y_train, y_test = df_training_y[train_index], df_training_y[test_index]\n",
+    "    \n",
+    "    test_model = test_model.fit(X_train, y_train)\n",
+    "    roc_test = roc_auc_score(y_test, test_model.predict_proba(X_test), multi_class='ovr')\n",
+    "\n",
+    "    print(roc_test)"
    ]
   }
  ],
